[tool.poetry]
name = "flood control relase management (using rl)"
version = "0.1.0"
description = "An Reinforment Learning model for optimal flood control in dam water discharge and minimising damage"
authors = ["Aryan Mohanty, Angel Maria Stanley"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
